# hackathon2-phase2

./: FINAL_SETUP.md  JWT_SETUP_GUIDE.md  START_HERE.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  generate_test_token.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_todos_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  todos.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: todo.py
backend/app/schemas/: error.py  todo.py
backend/app/services/: todo.py
frontend/: .env.local  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
frontend/.next/dev/: prerender-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/types/: routes.d.ts  validator.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/auth/: layout.tsx
frontend/lib/: api.ts  types.ts
specs/001-todo-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-rest-api/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
(+166 files in other folders)
